Shotwell 0.20.0 - 16 September 2014
-----------------------------------

  * Fix crash when deleting a photo in Shotwell Photo Viewer
  * Fix crash when deleting a photo
  * Better detection of corrupt files while importing
  * Updated translations


Shotwell 0.19.0 - 21 August 2014
--------------------------------

  * Support for Rajce.net and Gallery 3 photo services added
  * Set background image for lock screen
  * Better detection of corrupt images during import
  * Various bug fixes
  * Updated translations


Shotwell 0.18.1 - 30 Jun 2014
-----------------------------

  * Fix Flickr publishing errors due to Flickr moving to HTTPs-only
  * Fix crash when updating photo data/time
  * Fix crash due to nested tag and changing sidebar selection
  * Corrected URLs to point to new gnome.org pages


Shotwell 0.18.0 - 17 March 2014
-------------------------------

  * Compile and install translated help files
  * Updated translations


Shotwell 0.17.2 - 4 March 2014
------------------------------

  * UNIX pipe unnecessarily left open for each imported video
  * Improved searching for event comments and diacritics
  * Update translations


Shotwell 0.17.1 - 17 February 2014
----------------------------------

  * Updated translations
  * Parent folder names as search keywords rolled back (see bgo#722756)


Shotwell 0.17.0 - 4 February 2014
---------------------------------

  * Include parent folder names for keyword search
  * Tumblr publishing fixed
  * Bug fixes
  * Updated translations


Shotwell 0.15.1 - 19 November 2013 - "You're a Cashier!"
--------------------------------------------------------

  * Install Tumblr plugin resources
  * Fix crash when video thumbnails are being inspected and created


Shotwell 0.15.0 - 3 October 2013 - "Fruit's a Gamble"
-----------------------------------------------------

  * Copy and paste color adjustments between photos
  * Highlights detail adjustment
  * YouTube plugin now uses OAuth / OpenID