@@ -38,6 +38,8 @@ public class DirectPhoto : Photo {
     }
 
     public static void init(File initial_file) {
+        init_photo();
+        
         global = new DirectPhotoSourceCollection(initial_file);
         DirectPhoto photo;
         string? reason = global.fetch(initial_file, out photo, false);
@@ -47,6 +49,7 @@ public class DirectPhoto : Photo {
     }
     
     public static void terminate() {
+        terminate_photo();
     }
 
     // Gets the dimensions of this photo's pixbuf when scaled to original
@@ -257,7 +260,7 @@ public class DirectPhotoSourceCollection : DatabaseSourceCollection {
     }
     
     public void reimport_photo(DirectPhoto photo) {
-        photo.discard_prefetched(true);
+        photo.discard_prefetched();
         DirectPhoto reimported_photo;
         fetch(photo.get_file(), out reimported_photo, true);
     }
